--- a/meson_options.txt
+++ b/meson_options.txt
@@ -7,11 +7,11 @@ option('cxx', type: 'boolean', value: true, yield: true,
 option('docs', type: 'feature', value: 'auto', yield: true,
        description: 'Build documentation')
 
+option('lint', type: 'boolean', value: false, yield: true,
+       description: 'Run code quality checks')
+
 option('lv2dir', type: 'string', value: '', yield: true,
        description: 'LV2 bundle installation directory')
-
-option('strict', type: 'boolean', value: false, yield: true,
-       description: 'Enable ultra-strict warnings')
 
 option('tests', type: 'feature', value: 'auto', yield: true,
        description: 'Build tests')
