--- a/meson.build
+++ b/meson.build
@@ -75,13 +75,23 @@ lv2kit_dep = declare_dependency(
 
 # Print configuration summary
 if not meson.is_subproject()
-  summary('Tests', not get_option('tests').disabled(), bool_yn: true)
-  summary('Tools', not get_option('tools').disabled(), bool_yn: true)
+  summary(
+    {
+      'Tests': not get_option('tests').disabled(),
+      'Tools': not get_option('tools').disabled(),
+    },
+    bool_yn: true,
+    section: 'Components',
+  )
 
-  summary('Install prefix', get_option('prefix'))
-
-  summary('Headers', get_option('prefix') / get_option('includedir'))
-  summary('Libraries', get_option('prefix') / get_option('libdir'))
-  summary('Executables', get_option('prefix') / get_option('bindir'))
-  summary('Man pages', get_option('prefix') / get_option('mandir'))
+  summary(
+    {
+      'Install prefix':  get_option('prefix'),
+      'Headers':  get_option('prefix') / get_option('includedir'),
+      'Libraries':  get_option('prefix') / get_option('libdir'),
+      'Executables': get_option('prefix') / get_option('bindir'),
+      'Man pages': get_option('prefix') / get_option('mandir'),
+    },
+    section: 'Directories',
+  )
 endif
