Fix FreeBSD build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,7 +102,7 @@ mingw64:
 freebsd:
   tags: [freebsd,meson]
   script:
-    - meson setup build --wrap-mode=forcefallback -Dbuildtype=debug -Dwarning_level=everything -Dwerror=true -Ddocs=disabled
+    - meson setup build --wrap-mode=forcefallback -Dbuildtype=debug -Dwarning_level=everything -Dwerror=true -Ddocs=disabled  -Db_lundef=false
     - ninja -C build test
     - meson configure -Dbuildtype=release build
     - ninja -C build test
