--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,21 +1,21 @@
-# Copyright 2022-2023 David Robillard <d@drobilla.net>
+# Copyright 2022-2025 David Robillard <d@drobilla.net>
 # SPDX-License-Identifier: 0BSD OR ISC
 
-option('cxx', type: 'boolean', yield: true,
+option('cxx', type: 'boolean',
        description: 'Build C++ components')
 
-option('docs', type: 'feature', yield: true,
+option('docs', type: 'feature',
        description: 'Build documentation')
 
-option('lint', type: 'boolean', value: false, yield: true,
+option('lint', type: 'boolean', value: false,
        description: 'Run code quality checks')
 
-option('lv2dir', type: 'string', value: '', yield: true,
+option('lv2dir', type: 'string', value: '',
        description: 'LV2 bundle installation directory')
 
-option('tests', type: 'feature', yield: true,
+option('tests', type: 'feature',
        description: 'Build tests')
 
-option('tools', type: 'feature', yield: true,
+option('tools', type: 'feature',
        description: 'Build command line utilities')
 
